--- a/app/src/main/res/layout/activity_farmer_dashboard.xml
+++ b/app/src/main/res/layout/activity_farmer_dashboard.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/farmer_dash_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -72,6 +73,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tabBackground="@drawable/back_selected"
+        app:tabIndicator="@android:color/transparent"
         app:tabMode="auto"
         app:tabContentStart="30dp"
         app:tabPaddingEnd="20dp"
