--- a/app/src/main/res/layout/view_myplants.xml
+++ b/app/src/main/res/layout/view_myplants.xml
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="180dp"
 
 
+    android:layout_height="190dp"
     app:cardCornerRadius="8dp"
     app:cardUseCompatPadding="true"
-    app:elevation="8dp"
-    android:layout_height="190dp">
+    app:elevation="8dp">
 
     <LinearLayout
         android:layout_width="160dp"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <LinearLayout
+            android:layout_width="160dp"
+
+
+            android:layout_height="190dp"
             android:backgroundTint="@android:color/transparent"
 
-
-            android:layout_width="160dp"
             android:orientation="vertical"
 
-android:weightSum="2"
-
-            android:layout_height="190dp">
-
-
+            android:weightSum="2">
 
 
             <ImageView
@@ -34,33 +32,27 @@ android:weightSum="2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2" />
+
             <TextView
-                android:layout_marginBottom="4dp"
-                android:textAlignment="center"
-                android:layout_weight="1"
                 android:id="@+id/farmer_myplant_plantName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:layout_weight="1"
                 android:text="PlantName"
+                android:textAlignment="center"
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
 
-
-
-
-
-
-
-
-
-            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
+
     <TextView
+        android:id="@+id/farmer_myplant_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:id="@+id/farmer_myplant_id"/>
+        android:visibility="invisible" />
 
 
 </LinearLayout>
