--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,11 +2,13 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Item" />
-    <item android:title="Item" />
-    <item
-        android:id="@+id/app_bar_switch"
-        android:title="Switch"
-        app:actionLayout="@layout/switch_item" />
-    <item android:title="Item" />
+    <item android:title="Profile"
+        android:icon="@drawable/baseline_person_24"
+        android:id="@+id/menu_profile"/>
+    <item android:title="Setting"
+        android:icon="@drawable/baseline_settings_24"
+        android:id="@+id/menu_setting"/>
+    <item android:title="Logout"
+        android:icon="@drawable/baseline_logout_24"
+        android:id="@+id/menu_logout"/>
 </menu>
