--- a/app/src/main/res/layout/include_farmer.xml
+++ b/app/src/main/res/layout/include_farmer.xml
@@ -357,20 +357,42 @@
             android:layout_height="250dp"
             android:orientation="vertical">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
-                android:text="Explore Plants"
-                android:textSize="24dp"
-                android:textStyle="bold" />
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Explore Plants"
+                    android:textSize="24dp"
+                    android:textStyle="bold" />
+                <View
+                    android:layout_weight="1"
+                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"/>
+
+                <Button
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_margin="0dp"
+                    android:padding="0px"
+                    android:text="See All plants"
+                    android:textSize="8dp" />
+
+
+            </LinearLayout>
+
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/farmer_exploreplantsrv"
+                android:id="@+id/farmer_explore_plant"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp" />
 
@@ -463,12 +485,11 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/farmer_myplantsrv"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginLeft="20dp"
-                 />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/farmer_myplantsrv"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_marginLeft="20dp" />
             </LinearLayout>
 
         </LinearLayout>
