--- a/app/src/main/res/layout/include_farmer.xml
+++ b/app/src/main/res/layout/include_farmer.xml
@@ -80,7 +80,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
-                                    android:text="Tempraure"
+                                    android:text="Temperature"
 
                                     android:textSize="12sp" />
                             </LinearLayout>
@@ -246,10 +246,40 @@
             android:id="@+id/linearLayout9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView6">
+            app:layout_constraintTop_toBottomOf="@+id/cardView6"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    android:textSize="24dp"
+                    android:textStyle="bold" />
+                <View
+                    android:layout_weight="1"
+                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"/>
+
+                <Button
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_margin="0dp"
+                    android:padding="0px"
+                    android:text="See My Story"
+                    android:textSize="8dp" />
+
+
+            </LinearLayout>
 
             <HorizontalScrollView
                 android:id="@+id/horizontal"
@@ -499,14 +529,38 @@
             android:layout_height="350dp"
             android:orientation="vertical">
 
-            <TextView
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginHorizontal="20dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
-                android:text="MyFarm"
-                android:textSize="24dp"
-                android:textStyle="bold" />
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="My Farms"
+                    android:textSize="24dp"
+                    android:textStyle="bold" />
+                <View
+                    android:layout_weight="1"
+                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"/>
+
+                <Button
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_margin="0dp"
+                    android:padding="0px"
+                    android:text="See All Farm"
+                    android:textSize="8dp" />
+
+
+            </LinearLayout>
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/farmer_myfarmRv"
