--- a/app/src/main/res/layout/include_farmer.xml
+++ b/app/src/main/res/layout/include_farmer.xml
@@ -9,6 +9,7 @@
     >
 
     <LinearLayout
+        android:clipToPadding="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -16,8 +17,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_marginTop="10dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:clipToPadding="false"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:paddingBottom="5dp">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView6"
@@ -254,7 +259,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
                 android:orientation="horizontal">
                 <TextView
@@ -262,11 +266,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text=""
-                    android:textSize="24dp"
                     android:textStyle="bold" />
                 <View
                     android:layout_weight="1"
-                    android:layout_height="40dp"
+                    android:layout_height="0dp"
                     android:layout_width="wrap_content"/>
 
                 <Button
@@ -384,14 +387,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
                 android:orientation="horizontal">
                 <TextView
