--- a/app/src/main/res/layout/fragment_explore_plants.xml
+++ b/app/src/main/res/layout/fragment_explore_plants.xml
@@ -1,14 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Farmer.Dashboard.ExplorePlants.ExplorePlantsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="25dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Select Plants from\nBelow"
+        android:textSize="28sp"
+        android:textStyle="bold"/>
+
+
+   <androidx.cardview.widget.CardView
+       android:layout_height="wrap_content"
+       android:layout_width="match_parent"
+       android:layout_marginTop="90dp"
+       android:layout_marginHorizontal="20dp"
+       app:cardCornerRadius="20dp"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       >
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+
+        android:background="?attr/colorPrimary"
+        android:orientation="horizontal">
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/farmer_explore_plant_search"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_margin="4dp"
+            app:iconifiedByDefault="false"/>
+
+    </LinearLayout>
+
+   </androidx.cardview.widget.CardView>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="15dp"
+        android:layout_marginTop="150dp"
+        android:id="@+id/farmer_explore_plant_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
 
 </FrameLayout>
