--- a/app/src/main/res/layout/include_farmer.xml
+++ b/app/src/main/res/layout/include_farmer.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/Theme.ContractedFarming.NoActionBar"
@@ -11,7 +10,7 @@
     <LinearLayout
         android:clipToPadding="false"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
@@ -36,6 +35,7 @@
                 app:cardCornerRadius="10dp">
 
                 <LinearLayout
+                    android:baselineAligned="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -50,7 +50,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="horizontal"
-                            android:paddingLeft="5dp"
+                            android:paddingHorizontal="5dp"
                             android:theme="@style/Theme.ContractedFarming.NoActionBar">
 
                             <androidx.cardview.widget.CardView
@@ -61,6 +61,7 @@
                                 app:cardCornerRadius="40dp">
 
                                 <ImageView
+                                    android:contentDescription="Temp image"
                                     android:layout_width="40dp"
                                     android:layout_height="35dp"
                                     app:srcCompat="@drawable/ic_baseline_thermostat_24" />
@@ -97,7 +98,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="horizontal"
-                            android:paddingLeft="5dp">
+                            android:paddingHorizontal="5dp">
 
                             <androidx.cardview.widget.CardView
                                 android:layout_width="40dp"
@@ -107,6 +108,7 @@
                                 app:cardCornerRadius="40dp">
 
                                 <ImageView
+                                    android:contentDescription="Wind Speed"
                                     android:layout_width="40dp"
                                     android:layout_height="35dp"
                                     app:srcCompat="@drawable/baseline_speed_24" />
@@ -151,7 +153,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:paddingLeft="5dp">
+                            android:paddingHorizontal="5dp">
 
                             <androidx.cardview.widget.CardView
                                 android:layout_width="40dp"
@@ -161,6 +163,7 @@
                                 app:cardCornerRadius="40dp">
 
                                 <ImageView
+                                    android:contentDescription="Humidity"
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
                                     android:padding="5dp"
@@ -197,9 +200,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-
-
-                            android:paddingLeft="5dp">
+                            android:paddingHorizontal="5dp">
 
                             <androidx.cardview.widget.CardView
                                 android:layout_width="40dp"
@@ -210,6 +211,7 @@
                                 app:cardCornerRadius="40dp">
 
                                 <ImageView
+                                    android:contentDescription="Rainfall"
                                     android:layout_width="40dp"
                                     android:layout_height="35dp"
                                     android:padding="5dp"
@@ -279,7 +281,7 @@
                     android:layout_margin="0dp"
                     android:padding="0px"
                     android:text="See My Story"
-                    android:textSize="8dp" />
+                    android:textSize="8sp" />
 
 
             </LinearLayout>
@@ -345,6 +347,7 @@
                             app:layout_constraintTop_toTopOf="@+id/addStory" />
 
                         <ImageView
+                            android:contentDescription="Add"
                             android:id="@+id/addStory"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
@@ -362,7 +365,7 @@
 
                             android:text="Create a story"
                             android:textColor="@color/white"
-                            android:textSize="10sp"
+                            android:textSize="11sp"
                             app:layout_constraintEnd_toEndOf="@+id/addStory"
                             app:layout_constraintStart_toStartOf="@+id/addStory"
                             app:layout_constraintTop_toBottomOf="@+id/addStory" />
@@ -401,12 +404,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="Explore Plants"
-                    android:textSize="24dp"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
                 <View
                     android:layout_weight="1"
                     android:layout_height="40dp"
-                    android:layout_width="wrap_content"/>
+                    android:layout_width="0dp"/>
 
                 <Button
                     android:id="@+id/farmer_dash_explore_expand_button"
@@ -415,7 +418,7 @@
                     android:layout_margin="0dp"
                     android:padding="0px"
                     android:text="Expand"
-                    android:textSize="8dp" />
+                    android:textSize="8sp" />
 
 
             </LinearLayout>
@@ -446,12 +449,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="My Plants"
-                    android:textSize="24dp"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
                 <View
                     android:layout_weight="1"
                     android:layout_height="40dp"
-                    android:layout_width="wrap_content"/>
+                    android:layout_width="0dp"/>
 
                 <Button
                     android:id="@+id/farmer_dash_my_plant_button"
@@ -460,7 +463,7 @@
                     android:layout_margin="0dp"
                     android:padding="0px"
                     android:text="See Details"
-                    android:textSize="8dp" />
+                    android:textSize="8sp" />
 
 
             </LinearLayout>
@@ -514,6 +517,7 @@
                         app:layout_constraintTop_toTopOf="@+id/addPlant" />
 
                     <ImageView
+                        android:contentDescription="Add"
                         android:id="@+id/addPlant"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
@@ -528,10 +532,9 @@
                         android:id="@+id/textView12"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
                         android:text="Add Plant"
                         android:textColor="@color/white"
-                        android:textSize="10sp"
+                        android:textSize="11sp"
                         app:layout_constraintEnd_toEndOf="@+id/addPlant"
                         app:layout_constraintStart_toStartOf="@+id/addPlant"
                         app:layout_constraintTop_toBottomOf="@+id/addPlant" />
@@ -566,21 +569,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="My Farms"
-                    android:textSize="24dp"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
                 <View
                     android:layout_weight="1"
                     android:layout_height="40dp"
-                    android:layout_width="wrap_content"/>
+                    android:layout_width="0dp"/>
 
                 <Button
-
+                    android:id="@+id/farmer_dash_my_farm_button"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_margin="0dp"
                     android:padding="0px"
                     android:text="See All Farm"
-                    android:textSize="8dp" />
+                    android:textSize="8sp" />
 
 
             </LinearLayout>
