--- a/app/src/main/res/layout/view_my_plant.xml
+++ b/app/src/main/res/layout/view_my_plant.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
+    android:maxWidth="200dp"
     app:cardCornerRadius="7dp"
     android:layout_height="wrap_content">
 
