--- a/app/src/main/res/layout/fragment_explore_plants.xml
+++ b/app/src/main/res/layout/fragment_explore_plants.xml
@@ -1,96 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Farmer.Dashboard.ExplorePlants.ExplorePlantsFragment">
 
+    <androidx.core.widget.NestedScrollView
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:paddingVertical="15dp"
-        android:paddingHorizontal="25dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingHorizontal="25dp"
+                android:paddingVertical="15dp"
+                android:text="Select Plants from Below"
+                android:textSize="28sp"
+                android:textStyle="bold" />
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="70dp"
+                app:cardCornerRadius="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:id="@+id/linearLayout4"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+
+                    android:background="?attr/colorPrimary"
+                    android:orientation="horizontal">
+
+                    <androidx.appcompat.widget.SearchView
+                        android:id="@+id/farmer_explore_plant_search"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_margin="4dp"
+                        android:hint="Search Plants By Name ..."
+                        app:iconifiedByDefault="false" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/farmer_explore_plant_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="130dp"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="15dp" />
+        </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
+
+    <RelativeLayout
+        android:id="@+id/farmer_explore_plant_bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Select Plants from Below"
-        android:textSize="28sp"
-        android:textStyle="bold"/>
+        android:background="@color/seed"
+        android:elevation="4dp"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="0dp"
+        android:layout_gravity="center"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
 
-
-   <androidx.cardview.widget.CardView
-       android:layout_height="wrap_content"
-       android:layout_width="match_parent"
-       android:layout_marginTop="70dp"
-       android:layout_marginHorizontal="20dp"
-       app:cardCornerRadius="20dp"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toTopOf="parent"
-       >
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-
-        android:background="?attr/colorPrimary"
-        android:orientation="horizontal">
-
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/farmer_explore_plant_search"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="4dp"
-            app:iconifiedByDefault="false"/>
-
-    </LinearLayout>
-
-   </androidx.cardview.widget.CardView>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="142dp"
         >
 
-        <CheckBox
-            android:checked="true"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="All"
-            android:id="@+id/farmer_plant_fragment_all_checkbox"/>
-        <CheckBox
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fruits"
-            android:id="@+id/farmer_plant_fragment_fruits_checkbox"/>
-        <CheckBox
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Vegetable"
-            android:id="@+id/farmer_plant_fragment_vegetable_checkbox"/>
-        <CheckBox
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Meditional"
-            android:id="@+id/farmer_plant_fragment_meditional_checkbox"/>
+        <TextView
+            android:textStyle="bold"
+            android:textSize="22sp"
+            android:textColor="@color/white"
+            android:layout_marginTop="400px"
+            android:id="@+id/farmer_explore_plant_sheet_name"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-    </LinearLayout>
+        <androidx.viewpager.widget.ViewPager
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/farmer_explore_plant_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="200dp"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="15dp" />
-
-
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
