--- a/app/src/main/res/layout/view_plants.xml
+++ b/app/src/main/res/layout/view_plants.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/view_plant_main_layout"
     android:layout_width="wrap_content"
     app:cardCornerRadius="7dp"
     android:layout_margin="10dp"
