--- a/app/src/main/res/layout/prompt_add_plot.xml
+++ b/app/src/main/res/layout/prompt_add_plot.xml
@@ -20,12 +20,22 @@
 
         <EditText
             android:layout_marginBottom="14dp"
+            android:id="@+id/prompt_addplot_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Farm Name">
+
+            <requestFocus/>
+
+
+        </EditText>
+
+        <EditText
+            android:layout_marginBottom="14dp"
             android:id="@+id/prompt_addplot_area"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Area in Acre...">
-
-            <requestFocus/>
 
 
         </EditText>
@@ -76,6 +86,43 @@
 
 
     </LinearLayout>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:paddingHorizontal="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:id="@+id/prompt_plot_img_url"/>
+                <TextView
+                    android:id="@+id/prompt_add_plot_edittext"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:hint="File name"
+                    android:layout_marginBottom="5dp"/>
+
+
+            </LinearLayout>
+            <ImageButton
+                android:id="@+id/farmer_addplot_imageview_plot_selimage"
+
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:src="@drawable/baseline_photo_camera_24" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:paddingHorizontal="10dp"
