fix view for the plant and accessing checked farms from the list view from in the activity

--- a/app/src/main/res/layout/activity_farmer_select_farm.xml
+++ b/app/src/main/res/layout/activity_farmer_select_farm.xml
@@ -55,11 +55,11 @@
         android:layout_marginTop="180dp">
 
         <ListView
-            android:layout_weight="1"
             android:id="@+id/farmer_select_farm_popup_listView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"/>
+            android:divider="@null"
+            />
 
         <Button
             android:id="@+id/farmer_select_farm_popup_add_farm"
