--- a/app/src/main/res/layout/fragment_plant_popup_first.xml
+++ b/app/src/main/res/layout/fragment_plant_popup_first.xml
@@ -3,38 +3,41 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:background="#C86EE67A">
+
 
     <ImageView
-        android:padding="1dp"
         android:id="@+id/fragment_plant_popup_first_img"
-        android:layout_width="match_parent"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="111dp"
         android:layout_weight="2"
-        android:layout_marginRight="162dp"
-        android:layout_marginBottom="380dp"
-        card_view:layout_constraintBottom_toBottomOf="parent"
+        android:adjustViewBounds="true"
+        android:padding="1dp"
         card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintStart_toStartOf="parent"/>
-
+        card_view:layout_constraintHorizontal_bias="0.0"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginTop="140dp"
         android:orientation="horizontal"
         android:paddingTop="25dp"
         android:weightSum="5"
-        card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintStart_toStartOf="parent">
+        card_view:layout_constraintHorizontal_bias="0.0"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/fragment_plant_popup_first_img2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -98,29 +101,26 @@
 
     </LinearLayout>
 
-
-
-
-
     <TextView
         android:id="@+id/fragment_plant_popup_first_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="580dp"
-        android:gravity="right"
+        android:layout_marginTop="100dp"
+        android:gravity="center"
         android:paddingLeft="40dp"
         android:paddingRight="40dp"
         android:text="PAPAYA"
         android:textSize="40sp"
         android:textStyle="bold"
-        card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintStart_toStartOf="parent" />
+        card_view:layout_constraintHorizontal_bias="0.0"
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
 
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="300dp"
         android:layout_gravity="center"
         card_view:cardBackgroundColor="@android:color/transparent"
         card_view:cardElevation="0dp"
@@ -130,7 +130,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view_inner"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="330dp"
             android:layout_gravity="center"
             android:layout_marginTop="60dp"
             card_view:cardBackgroundColor="@color/white"
@@ -140,7 +140,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
