--- a/app/src/main/res/layout/view_listview_farmer_farm.xml
+++ b/app/src/main/res/layout/view_listview_farmer_farm.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="110dp"
+    android:background="@android:color/transparent"
 
 
    >
@@ -12,9 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         app:cardCornerRadius="10dp"
+        android:layout_marginHorizontal="20dp"
         android:id="@+id/view_select_farm_listview_card"
+        android:layout_marginVertical="5dp"
         >
         <LinearLayout
+            android:background="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
