--- a/app/src/main/res/layout/fragment_my_plants.xml
+++ b/app/src/main/res/layout/fragment_my_plants.xml
@@ -1,13 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Farmer.Dashboard.MyPlants.MyPlantsFragment">
 
+    <TextView
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="25dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="My Plants"
+        android:textSize="28sp"
+        android:textStyle="bold"/>
+
+
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginTop="90dp"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+
+        <CheckBox
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="All"
+            android:id="@+id/farmer_my_plant_fragment_all_checkbox"/>
+        <CheckBox
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Accepted"
+            android:id="@+id/farmer_my_plant_fragment_accepted_checkbox"/>
+        <CheckBox
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="On Hold"
+            android:id="@+id/farmer_my_plant_fragment_on_hold_checkbox"/>
+        <CheckBox
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rejected"
+            android:id="@+id/farmer_my_plant_fragment_rejected_checkbox"/>
+
+    </LinearLayout>
+
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/farmer_my_plants_fragment_recycle_view"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="15dp"
+        android:layout_marginTop="150dp"
+        android:id="@+id/farmer_my_plant_fragment_recycle_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</FrameLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/farmer_my_plant_fragment_add_floating_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="59dp"
+        android:src="@drawable/baseline_add_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
